--- a/Info.plist
+++ b/Info.plist
@@ -7,6 +7,8 @@
     <string>BlackTouchBar</string>
     <key>CFBundleIdentifier</key>
     <string>com.local.BlackTouchBar</string>
+    <key>CFBundleIconFile</key>
+    <string>BlackTouchBar</string>
     <key>CFBundleName</key>
     <string>BlackTouchBar</string>
     <key>CFBundleVersion</key>
