--- a/Info.plist
+++ b/Info.plist
@@ -11,8 +11,10 @@
     <string>BlackTouchBar</string>
     <key>CFBundleName</key>
     <string>BlackTouchBar</string>
+    <key>CFBundleShortVersionString</key>
+    <string>1.0.0</string>
     <key>CFBundleVersion</key>
-    <string>1.0</string>
+    <string>1.0.0</string>
     <key>LSUIElement</key>
     <true/>
 </dict>
